--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -6,6 +6,32 @@
   background-color: #fff;
 }
 
+.content_title {
+  margin: 0 0 60px 0;
+  font-size: 30px;
+  position: relative;
+  text-align: center;
+}
+
+.content_title span:before {
+  position: absolute;
+  bottom: -20px;
+  left: calc(50% - 30px);
+  width: 60px;
+  height: 5px;
+  content: '';
+  border-radius: 3px;
+  background: #000;
+}
+
+.content_title:before {
+  left: 0;
+}
+
+.content_title:after {
+  right: 0;
+}
+
 .card {
   margin: 0 10px;
   padding: 5px 0;
