--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -146,6 +146,7 @@
   transition: all 0.5s;
   cursor: pointer;
   margin: 0 0 40px 0;
+  -webkit-appearance: none;
 }
 .search:focus {
   outline: none;
@@ -160,7 +161,6 @@
   height: 50px;
   position: relative;
   border: 0;
-  border-radius: 3rem;
   left: 50%;
   transform: translate(-50%, 0);
 }
