--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -26,7 +26,7 @@
 
 .card {
   margin: 0 10px;
-  padding: 5px 0;
+  padding: 0 0 20px 0;
   text-align: left;
   color: inherit;
   text-decoration: none;
@@ -198,11 +198,43 @@
 }
 
 .btn_login_yahoo {
-  background-color: #ff0027;
+  background-color: #ff0033;
+}
+
+.btn_login_yahoo span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 8px;
+  left: 18px;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+}
+.btn_login_yahoo svg {
+  width: 28px;
+  height: 28px;
+  fill: #fff;
 }
 
 .btn_login_mail {
   background-color: #68a9cf;
+}
+
+.btn_login_mail span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 8px;
+  left: 18px;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+}
+.btn_login_mail svg {
+  width: 28px;
+  height: 28px;
+  fill: #fff;
 }
 
 .space_bar {
@@ -211,15 +243,65 @@
   border-bottom: 0;
 }
 
+.input_mail_container,
+.input_password_container {
+  display: inline-block;
+  margin: 0 0 20px 0;
+  min-width: 280px;
+  max-width: 500px;
+  position: relative;
+  width: 100%;
+  height: 50px;
+  text-align: right;
+}
+
+.input_mail_container {
+  margin: 0 0 20px 0;
+}
+.input_password_container {
+  margin: 0;
+}
+
+.input_mail_container span,
+.input_password_container span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 14px;
+  left: 18px;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+}
+.input_mail_container svg,
+.input_password_container svg {
+  width: 20px;
+  height: 20px;
+  fill: #999;
+}
+
 .input_mail,
 .input_password {
-  margin: 0 0 20px 0;
+  margin: 0;
   padding: 0 0 0 50px;
   width: 100%;
   height: 50px;
   min-width: 280px;
   max-width: 500px;
   border-radius: 10px;
+}
+
+.forgot_password {
+  display: inline-block;
+  margin: 5px 0 30px 0;
+  padding: 0 20px 0 0;
+  width: 100%;
+  min-width: 280px;
+  max-width: 500px;
+  font-size: 12px;
+  text-align: right;
+  color: #999;
+  text-decoration: underline;
 }
 /* .input_mail,
 .input_password {
