--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -198,6 +198,7 @@
   margin: 0 0 20px 0;
   padding: 0;
   width: 100%;
+  height: 50px;
   min-width: 280px;
   max-width: 500px;
   position: relative;
@@ -214,8 +215,8 @@
   display: block;
   content: '';
   position: absolute;
-  top: 0px;
-  left: 8px;
+  top: 8px;
+  left: 18px;
   width: 20px;
   height: 20px;
   color: #fff;
