--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -27,7 +27,7 @@
 .card {
   margin: 0 10px;
   padding: 0 0 20px 0;
-  text-align: left;
+  text-align: center;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
@@ -121,17 +121,21 @@
   height: 30px;
   fill: #000;
 }
-.btn_container {
+.form_container {
+  display: inline-block;
   width: 100%;
-  margin: 0;
+  min-width: 280px;
+  max-width: 500px;
+  margin: 40px 0 0 0;
   padding: 0 10px;
   text-align: center;
 }
 
 .terms {
-  margin: 40px 10px;
+  margin: 20px 10px;
   font-size: 1.4rem;
   text-align: center;
+  color: #666;
 }
 
 .btn_login_twitter,
@@ -143,8 +147,6 @@
   width: 100%;
   height: 50px;
   line-height: 50px;
-  min-width: 280px;
-  max-width: 500px;
   position: relative;
   border: none;
   border-radius: 10px;
@@ -199,8 +201,6 @@
   padding: 0;
   width: 100%;
   height: 50px;
-  min-width: 280px;
-  max-width: 500px;
   position: relative;
   border: none;
   border-radius: 10px;
@@ -258,7 +258,9 @@
 }
 
 .space_bar {
-  margin: 20px 0 40px 0;
+  display: inline-block;
+  margin: 20px 0 0 0;
+  width: 90%;
   border-top: 1px solid #ccc;
   border-bottom: 0;
 }
@@ -266,20 +268,11 @@
 .input_mail_container,
 .input_password_container {
   display: inline-block;
-  margin: 0 0 20px 0;
-  min-width: 280px;
-  max-width: 500px;
+  margin: 0;
   position: relative;
   width: 100%;
   height: 50px;
   text-align: right;
-}
-
-.input_mail_container {
-  margin: 0 0 20px 0;
-}
-.input_password_container {
-  margin: 0;
 }
 
 .input_mail_container span,
@@ -306,8 +299,6 @@
   padding: 0 0 0 50px;
   width: 100%;
   height: 50px;
-  min-width: 280px;
-  max-width: 500px;
   border-radius: 10px;
 }
 
@@ -316,21 +307,82 @@
   margin: 5px 0 30px 0;
   padding: 0 20px 0 0;
   width: 100%;
-  min-width: 280px;
-  max-width: 500px;
   font-size: 12px;
   text-align: right;
   color: #999;
   text-decoration: underline;
 }
-/* .input_mail,
-.input_password {
-  margin: 0 0 20px 0;
-  padding: 0 0 0 50px;
+
+.input_name_container {
+  display: flex;
+  justify-self: start;
+  align-items: center;
+  margin: 0;
+  position: relative;
+  min-width: 200px;
+  width: 100%;
+  height: 50px;
+}
+
+.input_label {
+  width: 120px;
+  font-size: 14px;
+  text-align: left;
+}
+
+.birth_gender_container {
+  display: flex;
+  justify-self: start;
+  align-items: center;
   width: 100%;
   height: 40px;
-  min-width: 280px;
-  max-width: 500px;
+  background-color: #fff;
+}
+
+.birth_gender {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 40px;
+  background-color: #fff;
+}
+
+.input_select {
+  width: 120px;
+  padding: 0 20px;
+  height: 40px;
+  font-size: 18px;
+  color: #fff;
+  background-color: #68a9cf;
+  border: none;
   border-radius: 5px;
-  border: 1px solid #999;
-} */
+}
+.input_radio,
+.input_radio_active {
+  width: 80px;
+  height: 40px;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 40px;
+}
+
+.input_radio {
+  color: #999;
+  background-color: #edf2f7;
+  cursor: pointer;
+}
+
+.radio_gender_active {
+  color: #fff;
+  background-color: #68a9cf;
+}
+
+.input_error {
+  padding: 5px 20px;
+  width: 100%;
+  height: 30px;
+  text-align: left;
+  font-size: 1.2rem;
+  color: #cf6775;
+}
