--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -352,26 +352,29 @@
 .input_select_active {
   width: 110px;
   padding: 0 20px 0 10px;
-  height: 40px;
+  height: 44px;
   font-size: 14px;
   position: relative;
   background-color: #edf2f7;
   border-radius: 10px;
   letter-spacing: 4px;
+  transition: all 0.5s;
 }
-.input_select:focus {
+.input_select:focus,
+.input_select_active {
   outline: none;
   background-color: #fff;
-  border: 3px solid #bfdcff;
-  transition: all 0.5s;
+  border: 2px solid #bfdcff;
 }
 .input_select {
   color: #666;
+  border: 2px solid #fff;
   background-color: #edf2f7;
 }
 .input_select_active {
   color: #666;
-  background-color: #edf2f7;
+  border: 2px solid #68a9cf;
+  background-color: #fff;
 }
 
 .select_arrow span::before {
@@ -395,21 +398,24 @@
   max-width: 50px;
   width: 70px;
   max-width: 70px;
-  height: 40px;
-  border-radius: 5px;
+  height: 44px;
+  border-radius: 10px;
   font-size: 14px;
   line-height: 40px;
+  transition: all 0.3s;
+  color: #666;
+  transition: all 0.5s;
 }
 
 .input_radio {
-  color: #666;
-  background-color: #edf2f7;
   cursor: pointer;
+  background-color: #edf2f7;
+  border: 2px solid #fff;
 }
 
-.radio_gender_active {
-  color: #fff;
-  background-color: #68a9cf;
+.input_radio_active {
+  border: 2px solid #68a9cf;
+  background-color: #fff;
 }
 
 .input_error {
@@ -435,4 +441,47 @@
   font-size: 1.4rem;
   text-decoration: underline;
   color: #999;
+}
+
+.btn_singup,
+.btn_singup_active {
+  margin: 0 0 20px 0;
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  position: relative;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.4rem;
+  color: #fff;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+.btn_singup {
+  background-color: #ccc;
+  color: #fff;
+}
+
+.btn_singup_active {
+  background-color: #68a9cf;
+  color: #fff;
+}
+
+.btn_singup span,
+.btn_singup_active span {
+  display: block;
+  content: '';
+  position: absolute;
+  top: 8px;
+  left: 18px;
+  width: 20px;
+  height: 20px;
+  color: #fff;
+}
+.btn_singup svg,
+.btn_singup_active svg {
+  width: 28px;
+  height: 28px;
+  fill: #fff;
 }
