--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -56,11 +56,21 @@
   transition: 0.2s linear;
   min-width: 300px;
   max-width: 400px;
+  max-height: 500px;
   width: 100%;
   margin: 10px;
   background-color: #fff;
   padding: 20px;
   border-radius: 10px;
+  overflow-y: auto;
+  overflow-y: scroll;
+  -ms-overflow-style: none; /* IE, Edge 対応 */
+  scrollbar-width: none; /* Firefox 対応 */
+}
+
+.modal_container_active::-webkit-scrollbar {
+  /* Chrome, Safari 対応 */
+  display: none;
 }
 
 .close_button_container {
