--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -1,20 +1,20 @@
 .main {
   max-width: 800px;
   min-width: 320px;
-  margin: 40px auto;
+  margin: 0 auto;
   padding: 10px 0;
   background-color: #fff;
   text-align: center;
 }
 
 .content_title {
-  margin: 0 0 60px 0;
+  margin: 20px 0;
   font-size: 24px;
   position: relative;
   text-align: center;
 }
 
-.content_title span:before {
+/* .content_title span:before {
   position: absolute;
   bottom: -20px;
   left: calc(50% - 30px);
@@ -23,7 +23,7 @@
   content: '';
   border-radius: 3px;
   background: #68a9cf;
-}
+} */
 
 .login_signup_form_container {
   margin: 0 10px;
