--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -2,28 +2,27 @@
   max-width: 800px;
   min-width: 320px;
   margin: 0 auto;
-  padding: 10px 0;
   background-color: #fff;
   text-align: center;
 }
 
 .content_title {
-  margin: 20px 0;
+  margin: 30px 0 45px 0;
   font-size: 24px;
   position: relative;
   text-align: center;
 }
 
-/* .content_title span:before {
+.content_title span:before {
   position: absolute;
-  bottom: -20px;
+  bottom: -10px;
   left: calc(50% - 30px);
   width: 60px;
   height: 5px;
   content: '';
   border-radius: 3px;
   background: #68a9cf;
-} */
+}
 
 .login_signup_form_container {
   margin: 0 10px;
