--- a/src/styles/Search.module.css
+++ b/src/styles/Search.module.css
@@ -1,13 +1,13 @@
 .main {
   max-width: 800px;
   min-width: 320px;
-  margin: 40px auto 40px auto;
-  padding: 10px 0;
+  margin: 0 auto;
   background-color: #fff;
+  text-align: center;
 }
 
 .content_title {
-  margin: 0 0 60px 0;
+  margin: 30px 0 45px 0;
   font-size: 24px;
   position: relative;
   text-align: center;
@@ -15,7 +15,7 @@
 
 .content_title span:before {
   position: absolute;
-  bottom: -20px;
+  bottom: -10px;
   left: calc(50% - 30px);
   width: 60px;
   height: 5px;
