--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -149,7 +149,6 @@
   color: #999;
   position: relative;
   text-align: right;
-  cursor: pointer;
   border: 1px solid #000;
   box-sizing: border-box;
   border-radius: 5px;
@@ -249,22 +248,27 @@
 .event_memo_container_active,
 .event_place_container,
 .event_place_container_active {
+}
+
+.event_memo_container,
+.event_memo_container_active,
+.event_place_container,
+.event_place_container_active {
   margin: 10px 0 0 0;
   width: 100%;
   padding: 0 20px;
-  position: relative;
   transition: all 0.5s;
   overflow: hidden;
 }
 
 .event_memo_container,
 .event_place_container {
-  max-height: 0px;
+  height: 0px;
 }
 
 .event_memo_container_active,
 .event_place_container_active {
-  max-height: 20px;
+  height: 20px;
 }
 .event_memo,
 .event_place {
