--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -404,6 +404,7 @@
   display: flex;
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .subtotalcount {
