--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -120,6 +120,13 @@
   overflow: hidden;
 }
 
+.message {
+  width: 100%;
+  margin: 20px 0 0 0;
+  font-size: 1.6rem;
+  font-weight: bold;
+}
+
 .title {
   width: 100%;
   margin: 20px 0 30px 0;
