--- a/src/styles/components/form.module.css
+++ b/src/styles/components/form.module.css
@@ -80,13 +80,21 @@
 
 /* テキスト入力 */
 
+.inputTextArea {
+  margin: 0;
+  padding: 10px;
+  width: 100%;
+  height: 100px;
+  border-radius: 5px;
+}
+
 .input_text,
 .input_password {
   margin: 0;
   padding: 0 20px 3px 20px;
   width: 100%;
   height: 40px;
-  border-radius: 10px;
+  border-radius: 5px;
 }
 
 .input_text_validated,
