--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,7 +26,8 @@ a {
   color: #999;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
   outline: none;
   background-color: #fff;
   border: 1px solid #68a9cf;
@@ -34,7 +35,8 @@ input:focus {
 }
 
 input,
-select {
+select,
+textarea {
   font-size: 1.4rem;
   -webkit-appearance: none;
   appearance: none;
@@ -43,7 +45,8 @@ select {
   transition: all 0.5s;
 }
 
-input:-webkit-autofill {
+input:-webkit-autofill,
+textarea:-webkit-autofill {
   box-shadow: 0 0 0 1000px #fff inset;
   -webkit-box-shadow: 0 0 0px 1000px inset inset;
 }
