--- a/src/styles/Goods.module.css
+++ b/src/styles/Goods.module.css
@@ -228,12 +228,24 @@
   align-items: center;
   height: 20px;
   margin: 0 20px;
+  position: relative;
 }
 .event_date_container svg {
   width: 20px;
   height: 20px;
   fill: #68a9cf;
   cursor: pointer;
+  display: block;
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 130px;
+  transform: translate(0, -50%);
+  -webkit-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  z-index: 1;
+  /* この要素のイベント無効化 */
+  pointer-events: none;
 }
 .event_date {
   margin: 0 20px 0 0;
